# mcp-oauth

./: .env.example  .gitignore  changelog.md  develop.py  oauth.settings.json  pyproject.toml  readme.md  requirements.txt  testing.py
doc/: client.md  development.md  oauth_client.md  oauth_server.md  server.md
src/: develop.py
src/mcp_oauth/: __init__.py  start_env.py  testing.py
src/mcp_oauth/client/: oauth_client.py
src/mcp_oauth/client/client_provider/: client_provider.py
src/mcp_oauth/client/features/: callbacks.py  token_storage.py
src/mcp_oauth/server/: auth_server.py  oauth_server.py  quick_server.py
src/mcp_oauth/server/auth_provider/: html_page.py  simple_auth_provider.py
src/mcp_oauth/server/features/: functions.py
src/mcp_oauth/server/token_verifier/: token_verifier.py
src/mcp_oauth/tests/: run.py
src/mcp_oauth/tests/services/client/: client.py
src/mcp_oauth/tests/services/client/example_servers/: server_settings.py  servers.py
src/mcp_oauth/tests/services/server/: api.py  server.py
src/mcp_oauth/utils/: criptografy_key.py  read_write2file.py
src/mcp_provider/: __init__.py  auth_server.py
src/tests/: run.py
src/tests/services/: client.py
src/tests/services/client/: client.py
src/tests/services/server/: api.py  server.py
tests/: .env.example  oauth_client.py  readme.md  requirements.txt  run.py  settings.py  testing.py
tests/services/: client.py  server.py
tests/services/client/: client.py
tests/services/client/example_servers/: servers.py
tests/services/server/: api.py  mcp_server.py  server.py
